--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^2.0.0"
 black = "^23.3.0"
 ruff = "^0.0.260"
 pre-commit = "^3.2.2"
+interrogate = "^1.5.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -23,3 +24,22 @@ build-backend = "poetry.core.masonry.api"
 [tool.ruff]
 line-length = 79
 target-version = "py311"
+
+[tool.interrogate]
+ignore-init-method = true
+ignore-init-module = true
+ignore-magic = true
+ignore-semiprivate = false
+ignore-private = false
+ignore-property-decorators = false
+ignore-module = true
+ignore-nested-functions = true
+ignore-nested-classes = true
+ignore-setters = false
+fail-under = 100
+exclude = ["setup.py", "docs", "build", "tests", "sandbox"]
+verbose = 1
+quiet = false
+whitelist-regex = []
+color = true
+omit-covered-files = false
