--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,15 @@ ruff = "^0.0.260"
 pre-commit = "^3.2.2"
 interrogate = "^1.5.0"
 
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.4.2"
+mkdocstrings = { extras = ["python"], version = "^0.20.0" }
+mkdocs-gen-files = "^0.4.0"
+mkdocs-literate-nav = "^0.6.0"
+mkdocs-autorefs = "^0.4.1"
+mkdocs-material = "^9.1.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
